Runtimes/ICallibriMathNative.Implementation.cs

// <<This file was autogenerated by NativeLibSourceGenerator>>
// <<This file is not mean to be read by human>>
#if UNITY_IOS
#define __IOS__
#endif
using NativeLibSourceGeneratorShared;
using System;
using System.Runtime.InteropServices;

using System.IO;
using System.Reflection;

namespace Neurotech.CallibriUtils
{
    public sealed class CallibriMathNative
    {
        private static string GetApplicationRoot()
        {
            return Path.GetDirectoryName(Assembly.GetExecutingAssembly().Location);
        }

        private static readonly Lazy<ICallibriMathNative> _api = new Lazy<ICallibriMathNative>(() =>
        {
            var platform = Platform.Type;
            try
            {
                switch (platform)
                {
                    case NativePlatformType.WinArm:
                    case NativePlatformType.WinArm64:
                    case NativePlatformType.WinX64:
                    case NativePlatformType.WinX86:
                        Environment.SetEnvironmentVariable("PATH", $"{ Path.Combine(GetApplicationRoot(), @"libs\windows") };{Environment.GetEnvironmentVariable("PATH")}"); // Not embed
                        break;
                    case NativePlatformType.LinuxArm:
                    case NativePlatformType.LinuxArm64:
                    case NativePlatformType.LinuxX64:
                    case NativePlatformType.LinuxX86:
                        Environment.SetEnvironmentVariable("PATH", $"{ Path.Combine(GetApplicationRoot(), @"libs\linux") };{Environment.GetEnvironmentVariable("PATH")}"); // Not embed
                        break;
                }
            }
            catch (Exception)
            {
                // ignore for IL2CPP
            }

            switch (platform)
            {
#if !__IOS__
                case NativePlatformType.WinArm:
                    return new WinArmImpl();
                case NativePlatformType.WinArm64:
                    return new WinArm64Impl();
                case NativePlatformType.WinX64:
                    return new WinX64Impl();
                case NativePlatformType.WinX86:
                    return new WinX86Impl();
                case NativePlatformType.AndroidARMv7:
                    return new AndroidARMv7Impl();
                case NativePlatformType.AndroidARMv8:
                    return new AndroidARMv8Impl();
                case NativePlatformType.AndroidX86:
                    return new AndroidX86Impl();
                case NativePlatformType.AndroidX64:
                    return new AndroidX64Impl();
                case NativePlatformType.OSX:
                    return new OSXImpl();
                case NativePlatformType.LinuxX64:
                    return new LinuxX64Impl();
                case NativePlatformType.LinuxX86:
                    return new LinuxX86Impl();
#endif
                case NativePlatformType.iOS:
#if __IOS__
                    return new iOSImpl();
#else
                    return new  DefaultImpl();
#endif
            }
            throw new NotSupportedException($"[OSDescription]:[{RuntimeInformation.OSDescription}]");
        });
        private CallibriMathNative() { }
        public static ICallibriMathNative Inst
        {
            get => _api.Value;
        }
    }
    
    public class DefaultImpl : ICallibriMathNative
    {
        
        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "createCallibriMathLib")]
        private static extern IntPtr n_createCallibriMathLib(int sampling_rate, int data_window, int nwins_for_pressure_index);
        public IntPtr createCallibriMathLib(int sampling_rate, int data_window, int nwins_for_pressure_index)
        { 
           return DefaultImpl.n_createCallibriMathLib( sampling_rate, data_window, nwins_for_pressure_index); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "freeCallibriMathLib")]
        private static extern void n_freeCallibriMathLib(IntPtr mathPtr);
        public void freeCallibriMathLib(IntPtr mathPtr)
        { 
            DefaultImpl.n_freeCallibriMathLib( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibInitFilter")]
        private static extern void n_CallibriMathLibInitFilter(IntPtr mathPtr);
        public void CallibriMathLibInitFilter(IntPtr mathPtr)
        { 
            DefaultImpl.n_CallibriMathLibInitFilter( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibPushData")]
        private static extern void n_CallibriMathLibPushData(IntPtr mathPtr, [In,Out] double[] samples, int samplesCount);
        public void CallibriMathLibPushData(IntPtr mathPtr, [In,Out] double[] samples, int samplesCount)
        { 
            DefaultImpl.n_CallibriMathLibPushData( mathPtr, samples, samplesCount); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibProcessDataArr")]
        private static extern void n_CallibriMathLibProcessDataArr(IntPtr mathPtr);
        public void CallibriMathLibProcessDataArr(IntPtr mathPtr)
        { 
            DefaultImpl.n_CallibriMathLibProcessDataArr( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibGetRR")]
        private static extern double n_CallibriMathLibGetRR(IntPtr mathPtr);
        public double CallibriMathLibGetRR(IntPtr mathPtr)
        { 
           return DefaultImpl.n_CallibriMathLibGetRR( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibGetPressureIndex")]
        private static extern double n_CallibriMathLibGetPressureIndex(IntPtr mathPtr);
        public double CallibriMathLibGetPressureIndex(IntPtr mathPtr)
        { 
           return DefaultImpl.n_CallibriMathLibGetPressureIndex( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibGetHR")]
        private static extern double n_CallibriMathLibGetHR(IntPtr mathPtr);
        public double CallibriMathLibGetHR(IntPtr mathPtr)
        { 
           return DefaultImpl.n_CallibriMathLibGetHR( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibGetModa")]
        private static extern double n_CallibriMathLibGetModa(IntPtr mathPtr);
        public double CallibriMathLibGetModa(IntPtr mathPtr)
        { 
           return DefaultImpl.n_CallibriMathLibGetModa( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibGetAmplModa")]
        private static extern double n_CallibriMathLibGetAmplModa(IntPtr mathPtr);
        public double CallibriMathLibGetAmplModa(IntPtr mathPtr)
        { 
           return DefaultImpl.n_CallibriMathLibGetAmplModa( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibGetVariationDist")]
        private static extern double n_CallibriMathLibGetVariationDist(IntPtr mathPtr);
        public double CallibriMathLibGetVariationDist(IntPtr mathPtr)
        { 
           return DefaultImpl.n_CallibriMathLibGetVariationDist( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibInitialSignalCorrupted")]
        private static extern bool n_CallibriMathLibInitialSignalCorrupted(IntPtr mathPtr);
        public bool CallibriMathLibInitialSignalCorrupted(IntPtr mathPtr)
        { 
           return DefaultImpl.n_CallibriMathLibInitialSignalCorrupted( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibResetDataProcess")]
        private static extern void n_CallibriMathLibResetDataProcess(IntPtr mathPtr);
        public void CallibriMathLibResetDataProcess(IntPtr mathPtr)
        { 
            DefaultImpl.n_CallibriMathLibResetDataProcess( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibSetRRchecked")]
        private static extern void n_CallibriMathLibSetRRchecked(IntPtr mathPtr);
        public void CallibriMathLibSetRRchecked(IntPtr mathPtr)
        { 
            DefaultImpl.n_CallibriMathLibSetRRchecked( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibSetPressureAverage")]
        private static extern void n_CallibriMathLibSetPressureAverage(IntPtr mathPtr, int t);
        public void CallibriMathLibSetPressureAverage(IntPtr mathPtr, int t)
        { 
            DefaultImpl.n_CallibriMathLibSetPressureAverage( mathPtr, t); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibRRdetected")]
        private static extern bool n_CallibriMathLibRRdetected(IntPtr mathPtr);
        public bool CallibriMathLibRRdetected(IntPtr mathPtr)
        { 
           return DefaultImpl.n_CallibriMathLibRRdetected( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibClearData")]
        private static extern void n_CallibriMathLibClearData(IntPtr mathPtr);
        public void CallibriMathLibClearData(IntPtr mathPtr)
        { 
            DefaultImpl.n_CallibriMathLibClearData( mathPtr); 
        }
 
    }
    public class WinX86Impl : ICallibriMathNative
    {
        
        [DllImport(CallibriUtilsLibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "createCallibriMathLib")]
        private static extern IntPtr n_createCallibriMathLib(int sampling_rate, int data_window, int nwins_for_pressure_index);
        public IntPtr createCallibriMathLib(int sampling_rate, int data_window, int nwins_for_pressure_index)
        { 
           return WinX86Impl.n_createCallibriMathLib( sampling_rate, data_window, nwins_for_pressure_index); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "freeCallibriMathLib")]
        private static extern void n_freeCallibriMathLib(IntPtr mathPtr);
        public void freeCallibriMathLib(IntPtr mathPtr)
        { 
            WinX86Impl.n_freeCallibriMathLib( mathPtr); 
        }

        [DllImport(CallibriUtilsLibNamePropvider.LibNameWin32, CallingConvention = CallingConvention.Cdecl, EntryPoint = "CallibriMathLibInitFilter")]
        private static extern void n_CallibriMathLibInitFilter(IntPtr mathPtr);
        public void CallibriMathLibInitFilter(IntPtr mathPtr)
        { 
            WinX86Impl.n_CallibriMathLibInitFilter( mathPtr); 
        }
